@@ -23,8 +23,14 @@ v 5-0.31
 - Added helper function void addForeignMethodInstance(Engine&, const String&, BaseClass*, bool (BaseClass::*pMethod)(FFIServices&)).
 - Added helper function void addNewForeignFuncInstance( Engine&, const String&, ForeignFunc* ).
 - New ObjectTypeIdentifier system tried and removed.
+- Added "member_list" as a new built-in function for creating a list of members of a function.
+- Added EngineMessage::DestroyedFuncAsMemberListArg and EngineMessage::NonFunctionAsMemberListArg.
+- Changed ObjectList::prepend() to push_front() and added push_back(), changing append() to defer to calling it.
 
 utilPile.h created.
+
+EngMsgToStr
+- Updated.
 
 
 ====================
